--- a/pom.xml
+++ b/pom.xml
@@ -129,12 +129,16 @@
     </build>
     <properties>
         <siddhi.version>4.2.7</siddhi.version>
-        <siddhi-map-keyvalue.version>1.0.13</siddhi-map-keyvalue.version>
         <log4j.version>1.2.17.wso2v1</log4j.version>
         <carbon.transport.version>4.4.15</carbon.transport.version>
         <siddhi.map.json.version>4.0.15</siddhi.map.json.version>
         <siddhi.map.xml.version>4.0.11</siddhi.map.xml.version>
+        <siddhi-map-keyvalue.version>1.0.13</siddhi-map-keyvalue.version>
         <jacoco.plugin.version>0.7.9</jacoco.plugin.version>
         <carbon.feature.plugin.version>3.0.0</carbon.feature.plugin.version>
+        <mysql-binlog-connector-java.version>0.13.0</mysql-binlog-connector-java.version>
+        <debezium-connector-mysql.version>0.8.0.Final</debezium-connector-mysql.version>
+        <debezium-embedded.version>0.8.0.Final</debezium-embedded.version>
+        <debezium-connector-oracle.version>0.8.0.CR1</debezium-connector-oracle.version>
     </properties>
 </project>
