implement in-memory offset backup using siddhi snapshot.

--- a/component/src/main/resources/log4j.properties
+++ b/component/src/main/resources/log4j.properties
@@ -22,9 +22,31 @@
 # has a default priority. All other categories need not be assigned a
 # priority in which case they inherit their priority from the
 # hierarchy.
-#log4j.rootLogger=DEBUG, stdout
+#log4j.rootLogger=FATAL, myappender
+##log4j.rootLogger=DEBUG
+#log4j.appender.myappender=org.apache.log4j.ConsoleAppender
+#log4j.appender.myappender.layout=org.apache.log4j.PatternLayout
+#log4j.appender.myappender.layout.ConversionPattern=%m%n
+#log4j.logger.org.wso2.extension.siddhi.io.cdc.source.ChangeDataCapture=DEBUG, myappender
+#log4j.additivity.org.wso2.extension.siddhi.io.cdc.source.ChangeDataCapture=false
+## don't use root logger
+#log4j.additivity.com.riskshield.server.plugin.StatisticPlugin=false
+#log4j.appender.stdout.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+#log4j.rootLogger=INFO, logfile
+#log4j.appender.logfile=org.apache.log4j.ConsoleAppender
+#log4j.appender.logfile.datePattern='-'dd'.log'
+#log4j.appender.logfile.File=log/radius-prod.log
+#log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+#log4j.appender.logfile.layout.ConversionPattern=%-6r %d{ISO8601} %-5p %40.40c %x - %m\n
+#log4j.logger.org.wso2.extension.siddhi.io.cdc.source.ChangeDataCapture=DEBUG, myappender
+#log4j.additivity.org.wso2.extension.siddhi.io.cdc.source.ChangeDataCapture=false
+#log4j.appender.myappender=org.apache.log4j.ConsoleAppender
+#log4j.appender.myappender.datePattern='-'dd'.log'
+#log4j.appender.myappender.File=log/access-ext-dmz-prod.log
+#log4j.appender.myappender.layout=org.apache.log4j.PatternLayout
+#log4j.appender.myappender.layout.ConversionPattern=%-6r %d{ISO8601} %-5p %40.40c %x - %m\n
 log4j.rootLogger=INFO, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%m%n
-#log4j.appender.stdout.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+log4j.logger.io.debezium=OFF
