--- a/component/src/test/resources/log4j.properties
+++ b/component/src/test/resources/log4j.properties
@@ -24,9 +24,16 @@
 # priority in which case they inherit their priority from the
 # hierarchy.
 #log4j.rootLogger=DEBUG, stdout
+#log4j.rootLogger=OFF, stdout
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%m%n
+#log4j.logger.io.debezium=OFF
+#log4j.appender.stdout.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+
 log4j.rootLogger=INFO, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%m%n
+log4j.appender.stdout.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
 log4j.logger.io.debezium=OFF
-#log4j.appender.stdout.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+log4j.logger.com.github.shyiko=OFF
