--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
                 <version>${siddhi.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.log4j.wso2</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.wso2.siddhi</groupId>
                 <artifactId>siddhi-query-compiler</artifactId>
                 <version>${siddhi.version}</version>
