--- a/component/pom.xml
+++ b/component/pom.xml
@@ -30,6 +30,10 @@
     <name>Siddhi io cdc extension</name>
     <dependencies>
         <dependency>
+            <groupId>org.apache.log4j.wso2</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.debezium</groupId>
             <artifactId>debezium-embedded</artifactId>
             <version>${debezium-embedded.version}</version>
@@ -59,10 +63,6 @@
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
             <artifactId>siddhi-query-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.log4j.wso2</groupId>
-            <artifactId>log4j</artifactId>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -96,10 +96,7 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <targetPath>${project.build.directory}</targetPath>
-                <includes>
-                    <include>log4j.properties</include>
-                </includes>
+                <filtering>true</filtering>
             </resource>
         </resources>
         <plugins>
@@ -172,7 +169,6 @@
                 </configuration>
             </plugin>
             <plugin>
-
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
