--- a/component/pom.xml
+++ b/component/pom.xml
@@ -28,8 +28,7 @@
     <artifactId>siddhi-io-cdc</artifactId>
     <packaging>bundle</packaging>
     <name>Siddhi io cdc extension</name>
-    <!--check the name-->
-    <!--refer from parent pom-->
+    <!--todo: check the name cdc io extension-->
     <dependencies>
         <dependency>
             <groupId>org.apache.log4j.wso2</groupId>
@@ -38,17 +37,14 @@
         <dependency>
             <groupId>io.debezium</groupId>
             <artifactId>debezium-embedded</artifactId>
-            <version>${debezium-embedded.version}</version>
         </dependency>
         <dependency>
             <groupId>io.debezium</groupId>
             <artifactId>debezium-connector-mysql</artifactId>
-            <version>${debezium-connector-mysql.version}</version>
         </dependency>
         <dependency>
             <groupId>io.debezium</groupId>
             <artifactId>debezium-connector-oracle</artifactId>
-            <version>${debezium-connector-oracle.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.siddhi</groupId>
@@ -71,29 +67,15 @@
             <artifactId>testng</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.wso2.extension.siddhi.map.xml</groupId>-->
-            <!--<artifactId>siddhi-map-xml</artifactId>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.wso2.extension.siddhi.map.json</groupId>-->
-            <!--<artifactId>siddhi-map-json</artifactId>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.wso2.extension.siddhi.map.keyvalue</groupId>
             <artifactId>siddhi-map-keyvalue</artifactId>
-            <version>${siddhi-map-keyvalue.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.github.shyiko</groupId>
             <artifactId>mysql-binlog-connector-java</artifactId>
-            <version>${mysql-binlog-connector-java.version}</version>
         </dependency>
-
     </dependencies>
     <build>
         <resources>
@@ -158,7 +140,7 @@
                             com.github.shyiko*,
                             io.debezium*,
                             org.apache.kafka*
-                            <!--try to remove , try not to pack, try to get to work with kafka.jar-->
+                            <!--todo: try to remove , try not to pack, try to get to work with kafka.jar-->
                         </Private-Package>
                         <Import-Package>
                             *;resolution:=optional
