--- a/component/pom.xml
+++ b/component/pom.xml
@@ -75,6 +75,10 @@
             <groupId>com.github.shyiko</groupId>
             <artifactId>mysql-binlog-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.extension.siddhi.store.rdbms</groupId>
+            <artifactId>siddhi-store-rdbms</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
